--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
                     </section>
                     <!-- //box -->
 
-                     <!-- box -->
-                     <section class="color-shape site">
+                    <!-- box -->
+                    <section class="color-shape site">
                         <a href="pdtime/main.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -475,6 +475,27 @@
                                 <img src="assets/blogicon/svg/sketchbook.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>PTDIGM</h5>
+                                    <p>SITE</p>
+                                    <span>CLASS</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape site">
+                        <a href="port/index3.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">CLASS</span>
+                                    <span class="overlay-text-thumb-donut">PORTFOLIO</span>
+                                    <span class="overlay-text-thumb1-donut">SITE</span>
+                                    <span class="overlay-text-thumb2-donut">CLASS</span>
+                                </div>
+                                <img src="assets/blogicon/svg/sketchbook.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>PORTFOLIO</h5>
                                     <p>SITE</p>
                                     <span>CLASS</span>
                                 </div>
@@ -525,8 +546,8 @@
                     </section>
                     <!-- //box -->
 
-                     <!-- box -->
-                     <section class="color-shape script">
+                    <!-- box -->
+                    <section class="color-shape script">
                         <a href="script/parallax/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -538,6 +559,48 @@
                                 <img src="assets/blogicon/svg/sneakers.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>PARALLAX</h5>
+                                    <p>SCRIPT</p>
+                                    <span>CLASS</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape script">
+                        <a href="slider/slide01.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">CLASS</span>
+                                    <span class="overlay-text-thumb-donut">SLIDE</span>
+                                    <span class="overlay-text-thumb1-donut">SCRIPT</span>
+                                    <span class="overlay-text-thumb2-donut">CLASS</span>
+                                </div>
+                                <img src="assets/blogicon/svg/sneakers.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>SLIDE</h5>
+                                    <p>SCRIPT</p>
+                                    <span>CLASS</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                    <!-- box -->
+                    <section class="color-shape script">
+                        <a href="mouse/mouse01.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">CLASS</span>
+                                    <span class="overlay-text-thumb-donut">MOUSE EFFECT</span>
+                                    <span class="overlay-text-thumb1-donut">SCRIPT</span>
+                                    <span class="overlay-text-thumb2-donut">CLASS</span>
+                                </div>
+                                <img src="assets/blogicon/svg/sneakers.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>MOUSE EFFECT</h5>
                                     <p>SCRIPT</p>
                                     <span>CLASS</span>
                                 </div>
