--- a/script/parallax/index.html
+++ b/script/parallax/index.html
@@ -175,6 +175,13 @@
                 </div>   
                 <!-- //Intro7 -->
 
+                <!-- Intro8 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro8" class="page-header">Parallax Effect</h2>
+                    <a href="parallax01.html" style="font-size: 24px;">VIEW</a>
+                </div>   
+                <!-- //Intro8 -->
+
 
 
 
@@ -194,6 +201,7 @@
                         <li><a href="#intro5">Parallax05 - Sticky Menu</a></li>
                         <li><a href="#intro6">Parallax06 - Hidden Menu</a></li>
                         <li><a href="#intro7">Parallax07 - Dot Menu</a></li>
+                        <li><a href="#intro8">Parallax Effect</a></li>
 
                     </ul>
                 </div>
