--- a/nongshim/sub1/index.html
+++ b/nongshim/sub1/index.html
@@ -346,8 +346,8 @@
                 <div class="swiper-slide"><a href="#"><img src="assets/img/s4.jpg" alt="공장견학"><span>공장견학</span></a></div>
                 <div class="swiper-slide"><a href="#"><img src="assets/img/s5.jpg" alt="오시는길"><span>오시는길</span></a></div>
             </div> 
-            <div class="swiper-scrollbar"></div>
-            <div class="swiper-scrollbar-drag"></div> 
+            <div class="swiper-scrollbar"><div class="swiper-scrollbar-drag"></div> </div>
+            
         </div>
     </section>
     <!-- //img-slide -->
