--- a/ncs.html
+++ b/ncs.html
@@ -1,58 +1,140 @@
-
-<h2>3.1 UI 구성 요소 제작</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background: #1b1b1b;">
+    <svg width="100px" height="100px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+        <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
+        <g><g transform="matrix(1 0 0 -1 0 1920)"><path  fill="white" d="M391.1,1745.9v155c0,2.4,0.9,4.5,2.7,6.4c1.8,1.8,3.9,2.7,6.4,2.7h18.1c2.4,0,4.5-0.9,6.4-2.7c1.8-1.8,2.7-3.9,2.7-6.4v-134.3C413.4,1759.6,401.3,1752.7,391.1,1745.9z M329.4,1691.9l-133.9,134.3c-1.9,1.7-2.9,3.8-2.9,6.4c0,2.5,1,4.7,2.9,6.4l12.7,12.7c1.7,1.9,3.8,2.9,6.4,2.9c2.5,0,4.7-1,6.4-2.9l134.3-133.9C346.2,1709.4,337.6,1700.8,329.4,1691.9z M572.6,930c-34.4,0-67.2,6.7-98.5,20.1c-31.3,13.4-58.4,31.5-81.1,54.3c-22.7,22.7-40.8,49.8-54.3,81.1c-13.4,31.3-20.1,64.2-20.1,98.5v290.4c0,34.4,6.7,67.2,20.1,98.5c13.4,31.3,31.5,58.4,54.3,81.1c22.7,22.7,49.8,40.8,81.1,54.3c31.3,13.4,64.2,20.1,98.5,20.1h36.3c34.4,0,67.2-6.7,98.5-20.1c31.3-13.4,58.4-31.5,81.1-54.3c22.7-22.7,40.8-49.8,54.3-81.1c13.4-31.3,20.1-64.2,20.1-98.5v-290.4c0-34.4-6.7-67.2-20.1-98.5c-13.4-31.3-31.5-58.4-54.3-81.1c-22.7-22.7-49.8-40.8-81.1-54.3c-31.3-13.4-64.2-20.1-98.5-20.1H572.6z M363.9,1401.9h235.9c2.4,0,4.5,0.9,6.4,2.7c1.8,1.8,2.7,3.9,2.7,6.4v272.2c0,2.4-0.9,4.5-2.7,6.4c-1.8,1.8-3.9,2.7-6.4,2.7h-18.1c-2.4,0-4.5-0.9-6.4-2.7c-1.8-1.8-2.7-3.9-2.7-6.4v-245H363.9c-2.4,0-4.5-0.9-6.4-2.7c-1.8-1.8-2.7-3.9-2.7-6.4v-18.1c0-2.4,0.9-4.5,2.7-6.4C359.4,1402.8,361.5,1401.9,363.9,1401.9z M146.1,1619.6c-1.7,0-3.2,0.4-4.5,1.3c-1.3,0.8-2.4,1.9-3.3,3.3c-0.8,1.3-1.3,2.8-1.3,4.5v18.1c0,2.4,0.9,4.5,2.7,6.4c1.8,1.8,3.9,2.7,6.4,2.7h155c-6.8-10.4-13.7-22.5-20.7-36.3H146.1z"/></g></g>
+        </svg>
+        <h2>4.1 사용자 유형별 조사 계획</h2>
 <div class="well">
-    프로젝트 분석·설계에 따른 사용자 환경을 디자인하고 구조화할 수 있다.<br>
-    사용성을 고려하여 시각적 특성에 맞게 콘텐츠를 구성할 수 있다.<br>
+사용자의 계층별 성향을 조사하여 서비스 디자인 요소 간의 관계성을 확립하고, 대상
+서비스 디자인 요소를 설정할 수 있다.<br>
 </div>
 
-<h3>1. UI 제작의 원칙</h3>
+<h3>1. 조사 계획 설문</h3>
 <div>
-인터페이스(Interface)란 두 개체가 만나는 접점에서 상호 간의 소통을 위하여 만들어진 매
-개체, 즉 소통하는 통로를 의미한다. 특히 사용자와 디지털 기기·디지털 시스템이 상호작
-용할 수 있도록 하는 물리적·가상적 매개체를 사용자 인터페이스(UI, User Interface)라고
-하는데, 사용자가 디지털 기기·시스템을 조작할 수 있게 하는 ‘입력장치’와 사용자가
-입력한 것의 결과를 표시하는 ‘출력장치’로 구성된다. 사용자 인터페이스를 제작하기
-위해 고려해야 하는 원칙은 다음과 같다.
+조사 계획 설문은 관심 있는 특정 주제에 관한 사람들의 행동, 태도를 이해하기 위해 조
+사 초기 단계에서 사용하는 방법이다. 일반적인 시장 조사를 위한 설문과 달리 이 단계에
+서 진행되는 조사 계획 설문은 짧고 간결하며 어렵지 않은 질문으로 구성된다. 이를 통해
+주제를 더 빨리 파악하고, 흥미로운 사용자의 패턴을 알 수 있으며, 조사를 어디에 집중해
+서 진행할지를 결정할 수 있다.
+조사 계획 설문은 문화 인류학적 조사를 위해 참가자를 가려내고 선정하는 데 사용할 수
+있다. 또 설문 조사에서 얻은 초기 결과가 애초에 팀에서 예상했던 바와 크게 다르다면
+연구 계획을 수정할 수도 있다.
 </div>
 
-<h5>1-1. 메타포(Metaphor)</h5>
+<h3>2. 사용자 조사 계획</h3>
 <div>
-메타포는 ‘은유’, ‘비유’를 뜻하는 말로, UI에서의 메타포란 휴지통이 ‘문서 삭제’,
-폴더가 ‘문서보관’을 의미하는 것처럼 시스템에서 표현하고자 하는 대상을 사용자의 경
-험과 지식에 비겨서 표현하는 유추적 모형을 의미한다. 따라서 UI 제작에 있어서 적절한
-메타포를 적용하는 것은 사용자가 시스템이 어떻게 작동하는지 빠르게 파악하는데 도움이
-된다.
+사용자 조사 계획은 프로젝트 조사를 설계하는 방법으로 조사를 위해 실행해야 할 일의
+모든 측면을 결정한다.
+이 방법은 조사 대상의 유형, 적정 인원수, 조사를 통해 알고자 하는 것, 참가자와의 소통
+을 위한 방식, 사용자 정보 등을 수집하는 데 필요한 방법과 그에 대한 설명, 단계별 산출
+물, 일정, 예산 등을 포함하는 조사의 목적을 제시한다.
 </div>
 
-<h5>1-2. 사용자 조정(User in Control)</h5>
+<h3>3. 조사 참가자 개인 정보 관리</h3>
 <div>
-사용자가 시스템을 따라가는 것이 아니라 사용자가 주도적으로 시스템을 조정하거나, 조
-정하는 것처럼 느끼도록 구성한다.
+조사 참가자 동의서는 제안된 방법 및 예상 연구 대상자들에게 정보를 전달하기 위해 계
+획 된 절차에 대한 설명을 포함하여 작성하고, 조사 전에 참가자의 서면 동의를 얻는다.
+결과에 개인의 신분이 노출될 만한 개인 신상 정보는 포함되지 않으며, 연구 결과가 출판
+되거나 연구 결과가 공개될 때에도 개인 신상 정보는 포함되지 않도록 한다. 책임자는 수
+집된 개인 정보들이 누출되지 않도록 감독한다.
 </div>
 
-<h5>1-3. 직접 조작(direct manipulation)</h5>
-<div>
-사용자가 시스템을 직접 제어하고 있다는 느낌을 주어야 한다. 예를 들어 모니터에서 파
-일을 드래그할 때 그 이동 경로를 자연스럽게 보여 주거나, 화면의 버튼을 클릭할 때 버
-튼이 눌린 형태로 변경되는 것이다. 
+<h2>4.2 사용자 유형별 조사 진행</h2>
+<div class="well">
+목표 사용자의 생활 태도와 서비스·경험에 대한 조사를 바탕으로 잠재 요구를 파악
+할 수 있다.<br>
 </div>
 
-<h5>1-4. 일관성(consistency</h5>
+<h3>1. 5가지 인간 요소</h3>
 <div>
-UI의 레이아웃과 조작 방식은 웹 사이트의 메인 페이지와 서브 페이지 뿐만 아니라 유사
-한 인터페이스에서 동일하고 일관성 있게 적용해야 한다. 일관성 있는 UI는 메인 페이지
-에서 습득한 UI 조작 방식을 서브 페이지에 적용할 수 있으므로 사이트 이용 방법에 대한
-학습 시간을 단축할 수 있으며, 사용할 때의 실수와 오동작을 최소화할 수 있다. UI의 일
-관성은 사용자에게 신뢰감을 준다. 
+5가지 인간 요소는 현장에서 관찰을 할 때 필요한 방법으로, 전체적인 사용자 경험을 만
+드는 신체적·인지적·사회적·문화적·감정적 요인을 확인하여 이것들이 사람들의 전반
+적인 경험에 어떤 영향을 주는지 알 수 있다. 사용자 경험을 조사 분석할 때, 이 5가지 요
+소를 총체적으로 고려하면 인간에 대한 보다 풍부한 연구 결과를 얻을 수 있다. 
 </div>
 
-<h5>1-5. 피드백(feedback)</h5>
+<h3>2. 현장 조사</h3>
 <div>
-사용자가 시스템을 조작·제어했을 때 사용자 행위에 대한 결과나 시스템의 반응 등을 컬
-러나 소리, 진동과 같은 시각·청각·촉각적 신호로 제공해야 한다. 시스템의 피드백을 통
-해 사용자와 시스템의 상호 작용이 형성된다. 메뉴에 마우스를 올리면 색이 바뀌거나 시
-스템 조작 과정에서 오류가 발생했을 때 경고음이 울리는 것 등을 예로 들 수 있다. 
+현장 조사는 해당 서비스가 제공되는 현장을 직접 방문하여 현장의 분위기를 파악하고 사
+용자들이 지닌 요구 사항을 빠르게 파악함으로써 공감대를 형성할 수 있는 방법이다. 짧
+은 시간 동안 다양한 사용자 유형의 행동을 관찰·비교하거나, 조사자가 직접 체험을 병
+행할 수 있어 짧은 시간 동안 다양한 단서들을 도출할 수 있다.
 </div>
+
+<h5>2-1. 특징</h5>
+<div>
+조사자들은 현장에서 사람들의 활동을 직접 확인함으로써 관련된 행동을 쉽게 이해할 수
+있다. 설문지나 포커스 그룹 인터뷰와는 다르게, 현장 방문을 통해서는 관찰과 관찰 결과
+에 대해 발견점을 도출하는 것이 중요하다. 
+</div>
+
+<h5>2-2. 진행 방식</h5>
+<div>
+조사자는 현장 조사 중에 궁금한 점이 있다면, 참가자에게 구체적인 활동이나 사용하는
+물건에 대해 “왜 그렇게 행동하셨는지 구체적으로 말씀해 주시겠어요?”라는 개방형 질문
+으로 대화를 이끌어 나간다. 이를 통해서 종종 기존에 발견하지 못했던 새로운 행동 패턴
+이나 잠재된 요구 사항을 발견할 수 있다.
+</div>
+
+<h3>3. 심층 인터뷰</h3>
+<div>
+심층 인터뷰는 질문과 관찰을 동시에 활동하여 사람들의 행동과 동기를 파악하는 등 삶에
+대한 깊고 풍부한 이해를 돕기 때문에 대부분의 조사 단계에서 매우 중요한 역할을 한다.
+심층 인터뷰를 활용하여 사용자 서비스 이용 특성 및 내재된 요구 사항을 파악하고 핵심
+이슈를 추출할 수 있다. 
+</div>
+
+<h5>3-1. 특징</h5>
+<div>
+심층 인터뷰와 같은 문화 인류학적 인터뷰는 사용자의 친숙한 장소에서, 사용자의 관점으
+로 그들의 행동과 경험을 이해하기 위해 진행한다. 조사자는 이러한 개방형 조사 방식을
+통해서 사용자가 자신의 이야기를 할 수 있도록 격려함으로써 미리 정해진 질문은 하는
+설문 조사 방식에 비해 사람들의 삶을 보다 적극적으로 이해할 수 있다.
+</div>
+
+<h5>3-2. 진행 방식</h5>
+<div>
+심층 인터뷰는 가능한 한 실제 사람들의 행동이 일어나는 현장이나 맥락에서 진행함으로
+써 사용자가 자신의 활동을 조사자 앞에서 시연하고, 그 경험을 공유할 수 있도록 한다.
+사람들을 인위적이거나 불편한 상황이 아닌 자신의 공간에서 훨씬 더 편안하게 말하고 행
+동할 수 있도록 하는 것이 중요하다.
+</div>
+
+<h3>4. 비디오 에스노그래피(Video Ethnography)</h3>
+<div>
+비디오 에스노그래피는 영상 인류학 분야에서 차용된 방법이다. 행동 패턴과 통찰을 확인
+하기 위해 분석 가능한 비디오를 이용하여 상황 속에서 일어나는 사람들의 활동과 사건을
+포착하는 것이 이 방법의 목적이다. 
+</div>
+
+<h5>4-1. 특징</h5>
+<div>
+비디오 에스노그래피는 서비스 프로세스, 공공장소 같은 역동적인 상황, 대화나 사람들이
+말로 설명할 수 없는 경험 등을 기록하는 데 편리하다. 반면에 이 방법은 사진 촬영에 비
+해 그것을 분석하는 데 시간이 많이 소요된다. 
+</div>
+
+<h5>4-2. 피드백(feedback)</h5>
+<div>
+비디오 에스노그래피의 진행 방식은 조사자가 영상을 직접 촬영할 수도 있고, 참가자가
+스스로 녹화하는 방식으로 진행될 수도 있다. 먼저 녹화를 위한 가이드라인을 만들고 동
+의를 얻은 후, 비디오를 녹화하여 추후 분석에 활용한다.
+</div>
+
+
+
+
+
+
+
+
 
 <h5>1-6. 심성모형(Mental Model)</h5>
 <div>
@@ -584,3 +666,6 @@ http://css-validator.kldp.org/
 
 
 
+
+</body>
+</html>
