--- a/script/parallax/parallax05.html
+++ b/script/parallax/parallax05.html
@@ -31,7 +31,7 @@
             --font-family: 'lato', sans-serif;
             --aspect-ratio: 32/17;
             --image-width-max: 500px;
-
+            overflow-x: hidden;
             background-color: var(--color-bg);
             font-family: var(--font-family);
             color: var(--color-title);
