--- a/mouse/mouse03.html
+++ b/mouse/mouse03.html
@@ -110,7 +110,7 @@
         z-index: 1000;
         user-select: none;
         pointer-events: none;
-        transform: scale(12);
+        transform: scale(1s);
         transition: transform 0.3s ease-in-out;
         mix-blend-mode: difference;
     }
