--- a/mouse/mouse04.html
+++ b/mouse/mouse04.html
@@ -121,7 +121,7 @@
     .contents {} 
     .move-image {
         position: absolute; left: 50%; top: 50%;
-        transform: translate(-50%, -50%) perspective(600px) rotateX(0deg) rotateY(0deg) scale(0.8);
+        /* transform: translate(-50%, -50%) perspective(600px) rotateX(0deg) rotateY(0deg) scale(0.8); */
         transform-style: preserve-3d;
         will-change: transform;
 
@@ -339,7 +339,7 @@ function animation(){
             // 마우스의 x축, y축을 최소값-100, 최대값100으로 설정
             mouseX = Math.max(-100, Math.min(100, $(window).width() / 2 - x));
             mouseY = Math.max(-100, Math.min(100, $(window).height() / 2 -y));
-
+            console.log(mouseX)
             angleX = (12 * mouseX) / 100;
             angleY = (12 * mouseY) / 100;
 
