--- a/port/index3.html
+++ b/port/index3.html
@@ -63,6 +63,16 @@
                 <div class="num-wrap">
                     <div class="num num1">01</div>
                 </div>
+                <div class="s2-desc">
+                    <div class="desc-wrap">
+                        <ul>
+                            <li class="desc-title"></li>
+                            <li class="desc-desc"></li>
+                        </ul>
+                    </div>
+                    <div class="btn-site"></div>
+                    <div class="btn-figma"></div>
+                </div>
                 <a class="circle-wrap" href="#">
                     <div class="circle">VIEW CODE</div>
                 </a>
