--- a/port/index3.html
+++ b/port/index3.html
@@ -66,12 +66,21 @@
                 <div class="s2-desc">
                     <div class="desc-wrap">
                         <ul>
-                            <li class="desc-title"></li>
-                            <li class="desc-desc"></li>
+                            <li class="desc-title">webstandard</li>
+                            <li class="desc-desc">
+                                웹 페이지의 기본적인 레이아웃을 바탕으로 웹 접근성을 
+                                위해 스크린 리더기를 고려한 탭 메뉴와 탭 이동을 구성하였고, 
+                                슬릭을 이용해 이미지가 자동으로 움직이는 효과를 주었습니다. 
+                                또한 동작 버튼을 추가하여 이미지의 동작 상태를 조절 할 수 있게 
+                                하였습니다. 마지막으로 라이트박스 플러그인을 사용하여 이미지에 
+                                팝업 기능도 추가하였습니다.
+                            </li>
                         </ul>
                     </div>
-                    <div class="btn-site"></div>
-                    <div class="btn-figma"></div>
+                    <div class="btn-wrap">
+                        <div class="btn btn-site"><a href="#">view site</a></div>
+                        <div class="btn btn-figma"><a href="#">view figma</a></div>
+                    </div>
                 </div>
                 <a class="circle-wrap" href="#">
                     <div class="circle">VIEW CODE</div>
