--- a/port/index3.html
+++ b/port/index3.html
@@ -82,18 +82,33 @@
                         <div class="btn btn-figma"><a href="#">view figma</a></div>
                     </div>
                 </div>
-                <a class="circleAll circle-wrap1" href="#">
-                    <div class="circle1">view tap-move</div>
-                </a>
-                <a class="circleAll circle-wrap2" href="#">
-                    <div class="circle2">view image-sprite</div>
-                </a>
-                <a class="circleAll circle-wrap3" href="#">
-                    <div class="circle3">view slick</div>
-                </a>
-                <a class="circleAll circle-wrap4" href="#">
-                    <div class="circle4">view lightbox</div>
-                </a>
+                <div class="circlebox">
+                    <a class="circleAll circle-wrap1" href="#">
+                        <div class="circle1">view tap-move</div>
+                    </a>
+                    <a class="circleAll circle-wrap2" href="#">
+                        <div class="circle2">view image-sprite</div>
+                    </a>
+                    <a class="circleAll circle-wrap3" href="#">
+                        <div class="circle3">view slick</div>
+                    </a>
+                    <a class="circleAll circle-wrap4" href="#">
+                        <div class="circle4">view lightbox</div>
+                    </a>
+                </div>
+                <div class="chromebox">
+                    <div class="chromewrap">
+                        <div class="menu-bar">
+                            <div class="circle-bar">
+                                <div class="red"></div>
+                                <div class="yellow"></div>
+                                <div class="green"></div>
+                            </div>
+                            <div class="title-bar"></div>  
+                        </div>
+                        <div class="menu-content"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- //section2 -->
