--- a/port/index3.html
+++ b/port/index3.html
@@ -104,9 +104,59 @@
                                 <div class="yellow"></div>
                                 <div class="green"></div>
                             </div>
-                            <div class="title-bar"></div>  
+                            <div class="title-bar">
+                                <div class="htmlTap">
+                                    <a href="#">HTML</a>
+                                    <div class="code-content">
+                                        안녕하세요
+                                    </div>
+                                </div>
+                                <div class="cssTap">
+                                    <a href="#">CSS</a>
+                                    <div class="code-content">
+                                        반갑습니다
+                                    </div>
+                                </div>
+                                <div class="scriptTap">
+                                    <a href="#">SCRIPT</a>
+                                    <div class="code-content">
+                                        잘가세요
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="menu-content"></div>
+                        <div class="menu-content">
+                            <div class="option-bar">
+                                <div class="arrowL">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                        <path fill="white" d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <div class="arrowR">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right" class="svg-inline--fa fa-arrow-right fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                                        <path fill="white" d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <div class="redo">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="redo" class="svg-inline--fa fa-redo fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                        <path fill="white" d="M500.33 0h-47.41a12 12 0 0 0-12 12.57l4 82.76A247.42 247.42 0 0 0 256 8C119.34 8 7.9 119.53 8 256.19 8.1 393.07 119.1 504 256 504a247.1 247.1 0 0 0 166.18-63.91 12 12 0 0 0 .48-17.43l-34-34a12 12 0 0 0-16.38-.55A176 176 0 1 1 402.1 157.8l-101.53-4.87a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12h200.33a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <div class="address-box">
+                                    <div class="address">hyunjin912.github.io/portfolio/index.html</div>
+                                </div> 
+                                <div class="dot">
+                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="ellipsis-v" class="svg-inline--fa fa-ellipsis-v fa-w-6" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512">
+                                        <path fill="white" d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z">
+                                        </path>
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="code">코드쓰세요</div>
+                        </div>
                     </div>
                 </div>
             </div>
