--- a/mouse/mouse05.html
+++ b/mouse/mouse05.html
@@ -165,8 +165,8 @@
         display: inline-block;
         color: #fff; border: 1px solid #fff;
         border-radius: 30px; padding: 5px 30px;
-        position: absolute; left: 8vw; bottom: 1.5vh;
-        width: 6.7vw;
+        /* position: absolute; left: 8vw; bottom: 1.5vh; */
+        /* width: 6.7vw; */
     }
 
     .infor4 .modal {
