--- a/site-lpoint/index.html
+++ b/site-lpoint/index.html
@@ -35,7 +35,9 @@
                     <div class="point">
                         <p>3,024P</p>
                         <div class="arrowR-blue">
-                            <a href="#"><img src="assets/img/1/right_arrow_blue.png" alt="포인트 자세히 보기"></a>
+                            <a href="#">
+                                <img src="assets/img/1/right_arrow_blue.png" alt="포인트 자세히 보기">
+                            </a>
                         </div>
                     </div>
                     <div class="bell">
@@ -43,7 +45,6 @@
                     </div>
                     <div class="hamburger"></div>
                 </div>
-                
             </div>
         </div>
     </header>
@@ -81,6 +82,9 @@
                                      assets/img/1/selfcastick@2x.jpg 2x,
                                      assets/img/1/selfcastick@3x.jpg 3x" src="assets/img/1/selfcastick.jpg" alt="이미지">
                     </picture>
+                    <!-- <div class="realImg">
+                        <img src="assets/img/1/selfcastick.jpg" alt="">
+                    </div> -->
                 </div>
             </div>
         </div>
