--- a/test/2m.html
+++ b/test/2m.html
@@ -36,7 +36,8 @@
         처음 브라우저에 보여지는 이미지의 크기는 실제 이미지의 너비이며,
         브라우저가 실제 이미지 너비보다 작아질 때 이미지도 같이 작아진다.
          */
-        /* img {max-width: 100%;} */
+        .boxWrap {}
+        .boxWrap img {max-width: 100%;}
 
 
         /* 
@@ -209,8 +210,8 @@
 </head>
 <body>
     <div class="boxWrap">
-        <!-- <img src="cookit/img/cookit-logo.jpg" alt=""> -->
-        <div class="box"></div>
+        <img src="cookit/img/cookit-logo.jpg" alt="">
+        <!-- <div class="box"></div> -->
     </div>
 </body>
 </html>
