--- a/ncs.html
+++ b/ncs.html
@@ -1,31 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body style="background: #1b1b1b;">
-    <svg width="100px" height="100px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
-        <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
-        <g><g transform="matrix(1 0 0 -1 0 1920)"><path  fill="white" d="M391.1,1745.9v155c0,2.4,0.9,4.5,2.7,6.4c1.8,1.8,3.9,2.7,6.4,2.7h18.1c2.4,0,4.5-0.9,6.4-2.7c1.8-1.8,2.7-3.9,2.7-6.4v-134.3C413.4,1759.6,401.3,1752.7,391.1,1745.9z M329.4,1691.9l-133.9,134.3c-1.9,1.7-2.9,3.8-2.9,6.4c0,2.5,1,4.7,2.9,6.4l12.7,12.7c1.7,1.9,3.8,2.9,6.4,2.9c2.5,0,4.7-1,6.4-2.9l134.3-133.9C346.2,1709.4,337.6,1700.8,329.4,1691.9z M572.6,930c-34.4,0-67.2,6.7-98.5,20.1c-31.3,13.4-58.4,31.5-81.1,54.3c-22.7,22.7-40.8,49.8-54.3,81.1c-13.4,31.3-20.1,64.2-20.1,98.5v290.4c0,34.4,6.7,67.2,20.1,98.5c13.4,31.3,31.5,58.4,54.3,81.1c22.7,22.7,49.8,40.8,81.1,54.3c31.3,13.4,64.2,20.1,98.5,20.1h36.3c34.4,0,67.2-6.7,98.5-20.1c31.3-13.4,58.4-31.5,81.1-54.3c22.7-22.7,40.8-49.8,54.3-81.1c13.4-31.3,20.1-64.2,20.1-98.5v-290.4c0-34.4-6.7-67.2-20.1-98.5c-13.4-31.3-31.5-58.4-54.3-81.1c-22.7-22.7-49.8-40.8-81.1-54.3c-31.3-13.4-64.2-20.1-98.5-20.1H572.6z M363.9,1401.9h235.9c2.4,0,4.5,0.9,6.4,2.7c1.8,1.8,2.7,3.9,2.7,6.4v272.2c0,2.4-0.9,4.5-2.7,6.4c-1.8,1.8-3.9,2.7-6.4,2.7h-18.1c-2.4,0-4.5-0.9-6.4-2.7c-1.8-1.8-2.7-3.9-2.7-6.4v-245H363.9c-2.4,0-4.5-0.9-6.4-2.7c-1.8-1.8-2.7-3.9-2.7-6.4v-18.1c0-2.4,0.9-4.5,2.7-6.4C359.4,1402.8,361.5,1401.9,363.9,1401.9z M146.1,1619.6c-1.7,0-3.2,0.4-4.5,1.3c-1.3,0.8-2.4,1.9-3.3,3.3c-0.8,1.3-1.3,2.8-1.3,4.5v18.1c0,2.4,0.9,4.5,2.7,6.4c1.8,1.8,3.9,2.7,6.4,2.7h155c-6.8-10.4-13.7-22.5-20.7-36.3H146.1z"/></g></g>
-        </svg>
-        <h2>4.1 사용자 유형별 조사 계획</h2>
+<h2>1.1 정보설게 구성</h2>
 <div class="well">
-사용자의 계층별 성향을 조사하여 서비스 디자인 요소 간의 관계성을 확립하고, 대상
-서비스 디자인 요소를 설정할 수 있다.<br>
+앱 UI/UX 디자인 개발에 필요한 요소를 기반으로 전체적인 정보설계를 구성할 수 있다.
 </div>
 
-<h3>1. 조사 계획 설문</h3>
+<h3>1. 정보설계</h3>
 <div>
 조사 계획 설문은 관심 있는 특정 주제에 관한 사람들의 행동, 태도를 이해하기 위해 조
-사 초기 단계에서 사용하는 방법이다. 일반적인 시장 조사를 위한 설문과 달리 이 단계에
-서 진행되는 조사 계획 설문은 짧고 간결하며 어렵지 않은 질문으로 구성된다. 이를 통해
-주제를 더 빨리 파악하고, 흥미로운 사용자의 패턴을 알 수 있으며, 조사를 어디에 집중해
-서 진행할지를 결정할 수 있다.
-조사 계획 설문은 문화 인류학적 조사를 위해 참가자를 가려내고 선정하는 데 사용할 수
-있다. 또 설문 조사에서 얻은 초기 결과가 애초에 팀에서 예상했던 바와 크게 다르다면
-연구 계획을 수정할 수도 있다.
+정보설계의 목적은 사용자와 앱의 상호작용을 원활하게 하여, 사용자가 원하는 정보를 쉽고 빠르게 찾을 수 있도록 하는데 있다.
+사용자 요구사항으로부터 도출된 콘텐츠와 기능구조를 바탕으로 하여, UI 구조와 내비게이션(navigation), 레이블링(labeling) 체계를 정립하는 과정이다.
+1976년 정보설계(Information Architecture, IA)라는 개념을 처음으로 언급한 리처으 사울 위먼(Richard Saul Worman)은 정보설계를 "데이터를 사람들이 
+이해할 수 있는 정보로 바꾸는 것." 이라고 정의하였다.
 </div>
 
 <h3>2. 사용자 조사 계획</h3>
@@ -664,8 +648,3 @@ http://css-validator.kldp.org/
     니저, 디자이너, 프로그래머 등이 하나의 TFT를 이룬다. 프로젝트의 규모에 따라서 디자이
     너와 프로그래머의 인원수가 조정되며, 보통 3명에서 많게는 7~10명 정도로 구성된다.</div>
 
-
-
-
-</body>
-</html>
