--- a/port/index3.html
+++ b/port/index3.html
@@ -105,19 +105,19 @@
                                 <div class="green"></div>
                             </div>
                             <div class="title-bar">
-                                <div class="htmlTap">
-                                    <a href="#">HTML</a>
+                                <div class="tap htmlTap">
+                                    <a class="active" href="#">HTML</a>
                                     <div class="code-content">
                                         안녕하세요
                                     </div>
                                 </div>
-                                <div class="cssTap">
+                                <div class="tap cssTap">
                                     <a href="#">CSS</a>
                                     <div class="code-content">
                                         반갑습니다
                                     </div>
                                 </div>
-                                <div class="scriptTap">
+                                <div class="tap scriptTap">
                                     <a href="#">SCRIPT</a>
                                     <div class="code-content">
                                         잘가세요
@@ -127,35 +127,43 @@
                         </div>
                         <div class="menu-content">
                             <div class="option-bar">
-                                <div class="arrowL">
-                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-left" class="svg-inline--fa fa-arrow-left fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                        <path fill="white" d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z">
-                                        </path>
-                                    </svg>
-                                </div>
-                                <div class="arrowR">
-                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="arrow-right" class="svg-inline--fa fa-arrow-right fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                        <path fill="white" d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z">
-                                        </path>
-                                    </svg>
-                                </div>
-                                <div class="redo">
-                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="redo" class="svg-inline--fa fa-redo fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-                                        <path fill="white" d="M500.33 0h-47.41a12 12 0 0 0-12 12.57l4 82.76A247.42 247.42 0 0 0 256 8C119.34 8 7.9 119.53 8 256.19 8.1 393.07 119.1 504 256 504a247.1 247.1 0 0 0 166.18-63.91 12 12 0 0 0 .48-17.43l-34-34a12 12 0 0 0-16.38-.55A176 176 0 1 1 402.1 157.8l-101.53-4.87a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12h200.33a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12z">
-                                        </path>
-                                    </svg>
+                                <div class="arrow-box">
+                                    <div class="arrowL">
+                                        <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M7.28487 0.817998C7.57523 1.1134 7.57115 1.58825 7.27575 1.87862L3.0829 6H12.75C13.1642 6 13.5 6.33579 13.5 6.75C13.5 7.16421 13.1642 7.5 12.75 7.5H3.09051L7.2742 11.5886C7.57044 11.8781 7.5759 12.353 7.28639 12.6492C6.99688 12.9454 6.52204 12.9509 6.2258 12.6614L0.7258 7.28639C0.581673 7.14554 0.500293 6.95261 0.500001 6.75109C0.499709 6.54956 0.580529 6.3564 0.724248 6.21513L6.22425 0.808881C6.51965 0.518516 6.9945 0.522598 7.28487 0.817998Z" fill="#F1F3F4"/>
+                                        </svg>
+                                    </div>
+                                    <div class="arrowR">
+                                        <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M6.71513 0.817998C6.42477 1.1134 6.42885 1.58825 6.72425 1.87862L10.9171 6H1.25C0.835787 6 0.5 6.33579 0.5 6.75C0.5 7.16421 0.835787 7.5 1.25 7.5H10.9095L6.7258 11.5886C6.42956 11.8781 6.4241 12.353 6.71361 12.6492C7.00312 12.9454 7.47796 12.9509 7.7742 12.6614L13.2742 7.28639C13.4183 7.14554 13.4997 6.95261 13.5 6.75109C13.5003 6.54956 13.4195 6.3564 13.2758 6.21513L7.77575 0.808881C7.48035 0.518516 7.0055 0.522598 6.71513 0.817998Z" fill="#86888A"/>
+                                        </svg>
+                                    </div>
+                                    <div class="redo">
+                                        <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M2 7C2 4.23858 4.23858 2 7 2C8.50726 2 9.85943 2.6667 10.7768 3.7232L8.5 6H14V0.5L11.8394 2.66063C10.65 1.33512 8.9228 0.5 7 0.5C3.41015 0.5 0.5 3.41015 0.5 7C0.5 10.5899 3.41015 13.5 7 13.5C9.57814 13.5 11.8042 11.999 12.8547 9.8265C13.0351 9.45359 12.8789 9.00512 12.506 8.8248C12.1331 8.64448 11.6847 8.8006 11.5043 9.1735C10.6947 10.8478 8.9812 12 7 12C4.23858 12 2 9.76142 2 7Z" fill="#F1F3F4"/>
+                                        </svg>
+                                    </div>
                                 </div>
                                 <div class="address-box">
-                                    <div class="address">hyunjin912.github.io/portfolio/index.html</div>
+                                    <div class="address">
+                                        <span>
+                                            <svg width="8" height="11" viewBox="0 0 8 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0C2.61929 0 1.5 1.11929 1.5 2.5V3.5H1C0.447715 3.5 0 3.94772 0 4.5V9.5C0 10.0523 0.447715 10.5 1 10.5H7C7.55228 10.5 8 10.0523 8 9.5V4.5C8 3.94772 7.55228 3.5 7 3.5H6.5V2.5C6.5 1.11929 5.38071 0 4 0ZM5.5 3.5V2.5C5.5 1.67157 4.82843 1 4 1C3.17157 1 2.5 1.67157 2.5 2.5V3.5H5.5Z" fill="#EAEAEA"/>
+                                            </svg>
+                                        </span>
+                                        hyunjin912.github.io/portfolio/index.html
+                                    </div>
                                 </div> 
                                 <div class="dot">
-                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="ellipsis-v" class="svg-inline--fa fa-ellipsis-v fa-w-6" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 512">
-                                        <path fill="white" d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z">
-                                        </path>
-                                    </svg>
+                                    <div class="dot-box">
+                                        <svg width="4" height="14" viewBox="0 0 4 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M3.5 2.1001C3.5 2.92852 2.82843 3.6001 2 3.6001C1.17157 3.6001 0.5 2.92852 0.5 2.1001C0.5 1.27167 1.17157 0.600098 2 0.600098C2.82843 0.600098 3.5 1.27167 3.5 2.1001Z" fill="#F1F3F4"/>
+                                            <path d="M3.5 7.1001C3.5 7.92852 2.82843 8.6001 2 8.6001C1.17157 8.6001 0.5 7.92852 0.5 7.1001C0.5 6.27167 1.17157 5.6001 2 5.6001C2.82843 5.6001 3.5 6.27167 3.5 7.1001Z" fill="#F1F3F4"/>
+                                            <path d="M3.5 12.1001C3.5 12.9285 2.82843 13.6001 2 13.6001C1.17157 13.6001 0.5 12.9285 0.5 12.1001C0.5 11.2717 1.17157 10.6001 2 10.6001C2.82843 10.6001 3.5 11.2717 3.5 12.1001Z" fill="#F1F3F4"/>
+                                        </svg>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="code">코드쓰세요</div>
                         </div>
                     </div>
                 </div>
@@ -231,7 +239,6 @@
     <script src="js/gsap.min.js"></script>
     <script src="js/custom.js"></script>
     <script>
-        
     </script>
 </body>
 </html>
