--- a/port/index3.html
+++ b/port/index3.html
@@ -366,6 +366,8 @@ let timer = "";
     <script src="js/prism.js"></script>
     <script src="js/custom.js"></script>
     <script>
+        let $tapButtons = $(".tap > a");
+        console.log($tapButtons)
     </script>
 </body>
 </html>
