--- a/port/index3.html
+++ b/port/index3.html
@@ -250,10 +250,11 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/gsap.min.js"></script>
     <script src="js/prism.js"></script>
-    <script src="../script/parallax/js/skrollr.min.js"></script>
+    <!-- <script src="../script/parallax/js/skrollr.min.js"></script> -->
     <script src="js/custom.js"></script>
     <script>
-        var s = skrollr.init();
+        TextColor();
+        // var s = skrollr.init();
         // var $tapButtons = document.querySelectorAll(".target");
         // var $address = document.querySelectorAll(".address-target");
 
