--- a/port/index3.html
+++ b/port/index3.html
@@ -546,7 +546,7 @@
         </div>
         <!-- //section5 -->
 
-        <div id="big-title" style="background: red;">
+        <div id="big-title">
             <div class="container">
                 <div class="big-title">
                     <div>animation
@@ -564,11 +564,9 @@
                         <p class="ani1-1">animation &ndash; animation &ndash; animation &ndash; animation &ndash; </p> 
                         <p class="ani1-2">animation &ndash; animation &ndash; animation &ndash; animation &ndash; </p> 
                     </div>
-                    <div class="collTextWrap">
-                        <div class="collText1">
-                            <p class="collect1-1">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p> 
-                            <p class="collect1-2">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p> 
-                        </div>
+                    <div class="collText1">
+                        <p class="collect1-1">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p> 
+                        <p class="collect1-2">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p> 
                     </div>
                     <div class="collText2">
                         <p class="collect2-1">collection &ndash; collection &ndash; collection &ndash; collection &ndash; </p>
@@ -592,7 +590,7 @@
 
 
         <div class="info">
-            <span class="scrollTop">0</span></div>
+            <span class="scrollTop">0</span>
         </div>
     </section>
     <!-- //contents -->
